@@ -116,6 +116,13 @@ _log_info = (
         _('Comma separated list of branch names that should be ignored'
         ' when building a list of branch names for a repository.'
         ' Default: None')),
+    (_('Branch Colors'), 'tortoisehg.branchcolors', [],
+        _('Space separated list of branch names and colors on the form'
+        ' branch:#XXXXXX. Spaces and colons in the branch name must be'
+        ' escaped using a backslash (\\). Likewise some other characters'
+        ' can be escaped in this way, e.g. \\u0040 will be decoded to the'
+        ' @ character, and \\n to a linefeed.'
+        ' Default: None')),
         )
 
 _paths_info = (
