@@ -209,6 +209,12 @@ the TortoiseHg Settings dialog on the Changelog tab.
 	:guilabel:`Dead Branches`
 		Comma separated list of branch names that should be ignored
 		when building a list of branch names for a repository.
+	:guilabel:`Branch Colors`
+		Space separated list of branch names and colors on the
+		form branch:#XXXXXX. Spaces and colons in the branch name must be
+		escaped using a backslash (\\). Likewise some other characters
+		can be escaped in this way, e.g. \\u0040 will be decoded to the
+		@ character, and \\n to a linefeed.
 
 The exact colors given to particular users can be configured by adding
 lines like these to your :file:`Mercurial.ini` file: ::
